feat(appserver): changes after run pre-commit